fix: whitespace

--- a/src/scss/_photos.scss
+++ b/src/scss/_photos.scss
@@ -20,9 +20,11 @@
 			padding: initial;
 		}
 	}
-  @media only screen and (max-width: 600px) {
-    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-  }
+	@media only screen and (max-width: 600px) {
+		.grid {
+			grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+		}
+	}
 }
 
 .grid {
